--- a/.github/workflows/firebase-hosting-features.yml
+++ b/.github/workflows/firebase-hosting-features.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - main
+      - feature/*
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -14,9 +14,3 @@ jobs:
       - run: npm i react-scripts
       - run: npm run test
       - run:   npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_M4_TESTING_80C8D }}'
-          channelId: live
-          projectId: m4-testing-80c8d
